<resources>
    <string name="app_name">InventoryApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="add_shoes">Add Shoes</string>
    <string name="view_shoes">View Shoes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hint" />
    <string name="select_user_type">Select user type</string>
    <string name="manager">Manager</string>
    <string name="cashier">Cashier</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_id">User Id</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="shoe_size">Shoe size</string>
    <string name="price">Price in GHS</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="signup">Sign Up</string>
    <string name="problem_with_request">There was a problem with your request. Please try again later</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="select_user_role">Select user role</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="go_to_login">Or Tap here to login if you already have an account</string>
    <string name="save">Save</string>
    <string name="u2022_bullet">•</string>
    <string name="no_results">No results</string>
    <string name="modify">Modify</string>
    <string name="role">role</string>
</resources>