<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        android:weightSum="30">


        <EditText
            android:id="@+id/user_id_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:ems="50"
            android:hint="@string/user_id"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_background"
                android:ems="50"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray" />

            <ImageButton
                android:id="@+id/show_new_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/password_edittext"
                android:layout_alignRight="@id/password_edittext"
                android:layout_centerVertical="true"
                android:background="@color/transparent_white"
                android:contentDescription="@string/hint" />
            <!--                        android:src="@drawable/ic_show_password" />-->

        </RelativeLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/default_button_state"
            android:text="@string/login"
            android:textColor="@color/white" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progress="80"
        android:progressDrawable="@drawable/circle"
        android:visibility="invisible" />


</RelativeLayout>